# cvm-rag

./: README.md  app.py  hybrid_search.ipynb  preprocessing.ipynb  pyproject.toml  requirements.txt
cvm_rag/: preprocessing.py
data/fre_cia_aberta_2024/: fre_cia_aberta_2024.csv  fre_cia_aberta_acao_entregue_2024.csv  fre_cia_aberta_administrador_declaracao_genero_2024.csv  fre_cia_aberta_administrador_declaracao_raca_2024.csv  fre_cia_aberta_ativo_imobilizado_2024.csv  fre_cia_aberta_ativo_intangivel_2024.csv  fre_cia_aberta_auditor_2024.csv  fre_cia_aberta_auditor_responsavel_2024.csv  fre_cia_aberta_capital_social_2024.csv  fre_cia_aberta_capital_social_aumento_2024.csv  fre_cia_aberta_capital_social_aumento_classe_acao_2024.csv  fre_cia_aberta_capital_social_classe_acao_2024.csv  fre_cia_aberta_capital_social_desdobramento_2024.csv  fre_cia_aberta_capital_social_desdobramento_classe_acao_2024.csv  fre_cia_aberta_capital_social_reducao_2024.csv  fre_cia_aberta_capital_social_reducao_classe_acao_2024.csv  fre_cia_aberta_capital_social_titulo_conversivel_2024.csv  fre_cia_aberta_direito_acao_2024.csv  fre_cia_aberta_distribuicao_capital_2024.csv  fre_cia_aberta_distribuicao_capital_classe_acao_2024.csv  fre_cia_aberta_distribuicao_dividendos_2024.csv  fre_cia_aberta_distribuicao_dividendos_classe_acao_2024.csv  fre_cia_aberta_empregado_declaracao_genero_2024.csv  fre_cia_aberta_empregado_declaracao_raca_2024.csv  fre_cia_aberta_empregado_local_declaracao_genero_2024.csv  (+28 more)
docs/: cvm_rag.rst  generate_docs.sh  modules.rst  requirements.txt
tests/: test_preprocessing.py
(+51 files in other folders)
