[tool.poetry]
name = "cvm-rag"
version = "0.1.0"
description = ""
authors = ["Gustavo De Mari Pereira <guhdemari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "^5.12.0"
numpy = "^2.2.2"
pgvector = "^0.3.6"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
torch = "^2.5.1"
sentence-transformers = "^3.3.1"
beautifulsoup4 = "^4.12.3"
psycopg2-binary = "^2.9.10"
google-generativeai = "^0.8.4"
polars = "^1.20.0"
pypdf = "^5.1.0"
pypdf2 = "^3.0.1"
pymupdf = "^1.25.2"
pytesseract = "^0.3.13"
sphinx = "^8.1.3"
furo = "^2024.8.6"
sphinx-autodoc-typehints = "^3.0.1"
ipykernel = "^6.29.5"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
